# kaggle-solutions

./: CMakeLists.txt  cmdline.h  csv.h  digits.cpp  exceptions.h  fileIO.h  hand.csv  make.py  make.sh  neural.cpp  neural.h  picture.h  random.h  str.h  system.h  types.h
BiologicalResponse/: .project
BiologicalResponse/src/: biologicalResponse.py
Digits2/: .project  README.md
Digits2/data/: convert.py
Digits2/src/: digits.py
Titanic/src/: titanic.py
Zillow/: xgboostNaive.py
Zillow/data/: .gitattributes  zillow_data_dictionary.xlsx
digits/: CMakeLists.txt  cmdline.h  csv.h  digits.cpp  exceptions.h  fileIO.cpp  fileIO.h  make.py  math.h  neural.cpp  neural.h  picture.cpp  probEstimator.h  random.h  str.cpp  str.h  system.cpp  timer.h
digits/easybmp/: CMakeLists.txt
digits/googletest/make/.svn/: entries
digits/googletest/msvc/.svn/: entries
digits/lockless_allocator/: CMakeLists.txt
googletest-read-only/.svn/: all-wcprops  entries
googletest-read-only/build-aux/.svn/: entries
googletest-read-only/cmake/.svn/: entries
googletest-read-only/codegear/.svn/: entries
googletest-read-only/include/.svn/: entries
googletest-read-only/m4/.svn/: entries
googletest-read-only/samples/.svn/: all-wcprops
googletest-read-only/test/.svn/: entries
googletest-read-only/xcode/.svn/: entries
googletest/include/.svn/: all-wcprops
googletest/include/gtest/: gtest-printers.h
googletest/scripts/.svn/: entries
googletest/src/.svn/: all-wcprops
lockless/: install_demompi.txt  libllmpi.so.1.2  libllmpif.so.1.2  license.txt  mpi.h  mpicc  mpicxx  mpicxx.h  mpiexec  mpif.h  mpif77  pmpi.h
lockless_allocator/: CMakeLists.txt
(+16 files in other folders)
